Replace evidence-type mappings with Boolean skill expressions