@@ -3,32 +3,25 @@ package com.lokiscale.bifrost.internal.runtime.evidence;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.lokiscale.bifrost.internal.skill.YamlSkillManifest;
 
-import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 
 public final class EvidenceContract
 {
-    private static final EvidenceContract EMPTY = new EvidenceContract(Map.of(), Map.of(), Map.of(), Map.of());
+    private static final EvidenceContract EMPTY = new EvidenceContract(Map.of(), Map.of());
 
-    private final Map<String, Set<String>> evidenceByClaim;
-    private final Map<String, Set<String>> evidenceByTool;
+    private final Map<String, EvidenceExpression> expressionsByClaim;
     private final Map<String, String> canonicalClaimByNormalized;
-    private final Map<String, String> canonicalToolByNormalized;
 
-    private EvidenceContract(Map<String, Set<String>> evidenceByClaim,
-            Map<String, Set<String>> evidenceByTool,
-            Map<String, String> canonicalClaimByNormalized,
-            Map<String, String> canonicalToolByNormalized)
+    private EvidenceContract(Map<String, EvidenceExpression> expressionsByClaim,
+            Map<String, String> canonicalClaimByNormalized)
     {
-        this.evidenceByClaim = evidenceByClaim;
-        this.evidenceByTool = evidenceByTool;
-        this.canonicalClaimByNormalized = canonicalClaimByNormalized;
-        this.canonicalToolByNormalized = canonicalToolByNormalized;
+        this.expressionsByClaim = Collections.unmodifiableMap(new LinkedHashMap<>(expressionsByClaim));
+        this.canonicalClaimByNormalized = Collections.unmodifiableMap(new LinkedHashMap<>(canonicalClaimByNormalized));
     }
 
     public static EvidenceContract empty()
@@ -50,70 +43,46 @@ public final class EvidenceContract
             outputSchema.getProperties().keySet().forEach(propertyName -> schemaPropertiesByNormalized.put(normalizeKey(propertyName), propertyName));
         }
 
-        Map<String, Set<String>> evidenceByClaim = new LinkedHashMap<>();
+        Map<String, EvidenceExpression> expressionsByClaim = new LinkedHashMap<>();
         Map<String, String> canonicalClaimByNormalized = new LinkedHashMap<>();
-
-        manifest.getClaims().forEach((claimName, evidenceTypes) ->
+        EvidenceExpressionParser parser = new EvidenceExpressionParser();
+        manifest.getClaims().forEach((claimName, expression) ->
         {
             String canonicalClaim = schemaPropertiesByNormalized.getOrDefault(normalizeKey(claimName), claimName);
-            evidenceByClaim.put(canonicalClaim, copyEvidenceSet(evidenceTypes));
+            expressionsByClaim.put(canonicalClaim, parser.parse(expression));
             canonicalClaimByNormalized.put(normalizeKey(canonicalClaim), canonicalClaim);
         });
+        return compiled(expressionsByClaim, canonicalClaimByNormalized);
+    }
 
-        Map<String, Set<String>> evidenceByTool = new LinkedHashMap<>();
-        Map<String, String> canonicalToolByNormalized = new LinkedHashMap<>();
-        manifest.getToolEvidence().forEach((toolName, evidenceTypes) ->
-        {
-            evidenceByTool.put(toolName, copyEvidenceSet(evidenceTypes));
-            canonicalToolByNormalized.put(normalizeKey(toolName), toolName);
-        });
-
-        return new EvidenceContract(
-                Map.copyOf(evidenceByClaim),
-                Map.copyOf(evidenceByTool),
-                Map.copyOf(canonicalClaimByNormalized),
-                Map.copyOf(canonicalToolByNormalized));
+    public static EvidenceContract compiled(Map<String, EvidenceExpression> expressionsByClaim,
+            Map<String, String> canonicalClaimByNormalized)
+    {
+        return expressionsByClaim == null || expressionsByClaim.isEmpty()
+                ? empty()
+                : new EvidenceContract(expressionsByClaim, canonicalClaimByNormalized);
     }
 
     public boolean isEmpty()
     {
-        return evidenceByClaim.isEmpty() && evidenceByTool.isEmpty();
+        return expressionsByClaim.isEmpty();
     }
 
     public Set<String> claims()
     {
-        return evidenceByClaim.keySet();
+        return expressionsByClaim.keySet();
     }
 
-    public Set<String> evidenceForClaim(String claimName)
+    public EvidenceExpression expressionForClaim(String claimName)
     {
         String canonical = canonicalClaimByNormalized.get(normalizeKey(claimName));
-        if (canonical == null)
-        {
-            return Set.of();
-        }
-        return evidenceByClaim.getOrDefault(canonical, Set.of());
+        return canonical == null ? null : expressionsByClaim.get(canonical);
     }
 
-    public Set<String> evidenceProducedByTool(String toolName)
+    public String canonicalExpressionForClaim(String claimName)
     {
-        String canonical = canonicalToolByNormalized.get(normalizeKey(toolName));
-        if (canonical == null)
-        {
-            return Set.of();
-        }
-        return evidenceByTool.getOrDefault(canonical, Set.of());
-    }
-
-    public Set<String> requiredEvidenceForClaims(Collection<String> claimNames)
-    {
-        if (claimNames == null || claimNames.isEmpty())
-        {
-            return Set.of();
-        }
-        LinkedHashSet<String> requiredEvidence = new LinkedHashSet<>();
-        claimNames.forEach(claimName -> requiredEvidence.addAll(evidenceForClaim(claimName)));
-        return Set.copyOf(requiredEvidence);
+        EvidenceExpression expression = expressionForClaim(claimName);
+        return expression == null ? null : expression.canonical();
     }
 
     public Set<String> presentClaims(JsonNode candidate)
@@ -122,7 +91,6 @@ public final class EvidenceContract
         {
             return Set.of();
         }
-
         LinkedHashSet<String> presentClaims = new LinkedHashSet<>();
         candidate.fieldNames().forEachRemaining(fieldName ->
         {
@@ -132,33 +100,12 @@ public final class EvidenceContract
                 presentClaims.add(canonicalClaim);
             }
         });
-
-        return Set.copyOf(presentClaims);
+        return Collections.unmodifiableSet(presentClaims);
     }
 
-    public Map<String, Set<String>> evidenceByClaim()
+    public Map<String, EvidenceExpression> expressionsByClaim()
     {
-        return evidenceByClaim;
-    }
-
-    public Map<String, Set<String>> evidenceByTool()
-    {
-        return evidenceByTool;
-    }
-
-    private static Set<String> copyEvidenceSet(Collection<String> evidenceTypes)
-    {
-        if (evidenceTypes == null || evidenceTypes.isEmpty())
-        {
-            return Set.of();
-        }
-
-        LinkedHashSet<String> normalized = new LinkedHashSet<>();
-        evidenceTypes.stream()
-                .filter(Objects::nonNull)
-                .forEach(normalized::add);
-
-        return Set.copyOf(normalized);
+        return expressionsByClaim;
     }
 
     private static String normalizeKey(String value)
